<resources>
    <string name="app_name">Linguity</string>
    <string name="hello">Hello,</string>
    <string name="username">Username</string>
    <string name="logout">LogOut</string>
    <string name="english_learning">English Learning</string>
    <string name="english_learning_page_title">English Learning</string>
    <string name="choose_your_checker">Choose your checker</string>
    <string name="pronunciation_checker">Pronunciation\n Checker</string>
    <string name="pronunciation_page_title">Pronunciation Exercise</string>
    <string name="pronunciation_level">Choose your level</string>
    <string name="pronunciation_word">Choose your word</string>
    <string name="pronunciation_this">Pronounce this word</string>
    <string name="pronunciation_this_word">Apple</string>
    <string name="pronunciation_your">Your pronunce</string>
    <string name="pronunciation_your_word">Apple</string>
    <string name="pronunciation_btn_record">Start Record</string>
    <string name="pronunciation_btn_play">Play</string>
    <string name="pronunciation_btn_submit">Submit Pronunciation</string>
    <string name="pronunciation_btn_try">Try Again</string>
    <string name="pronunciation_btn_next">Back to word</string>
    <string name="spelling_quiz">Spelling Quiz</string>
    <string name="spelling_quiz_page_title">Spelling Exercise</string>
    <string name="spelling_quiz_level">Choose your level</string>
    <string name="spelling_quiz_word">Choose your word</string>
    <string name="spelling_this">Spell this word</string>
    <string name="spelling_this_word">Apple</string>
    <string name="spelling_your">Your spell</string>
    <string name="spelling_your_word">Apple</string>
    <string name="spelling_btn_record">Start Record</string>
    <string name="spelling_btn_play">Play</string>
    <string name="spelling_btn_submit">Submit Spelling</string>
    <string name="spelling_btn_try">Try Again</string>
    <string name="spelling_btn_next">Back to word</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_question">Do you have an account?</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_question">Already have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="login_here">Login here</string>
    <string name="empty_field_message">All fields must be filled.</string>
    <string name="title">Lorem ipsum dolor sit amet consectetur adipiscing elit sociis torquent</string>
    <string name="content">Lorem ipsum dolor sit amet consectetur adipiscing elit sapien viverra leo, eget sodales senectus tellus commodo id primis dignissim dictumst felis, magnis sociis hendrerit taciti fringilla turpis hac habitant varius. Magna ad aptent quis mauris enim erat euismod sollicitudin cras vehicula congue lacus massa, purus velit neque mi gravida posuere mus semper sed rhoncus mattis. Mus dui litora interdum magna fermentum felis mi porttitor, non leo parturient arcu cubilia fusce vel sollicitudin, vitae cras porta vehicula id at libero. Pretium taciti eget augue massa fermentum luctus magnis praesent gravida ligula primis diam, vulputate sociis volutpat tincidunt sociosqu habitasse varius felis posuere malesuada. Nostra conubia sociis ornare diam natoque pharetra lectus feugiat pulvinar, fames in sodales et class malesuada porttitor sagittis, erat at euismod ultrices a mollis morbi platea. Sociosqu posuere integer varius quam molestie aliquet duis ornare eu, interdum sapien maecenas praesent semper ad netus justo, ridiculus venenatis blandit volutpat pretium mauris aliquam sem.</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
</resources>